refactored tool_executor; more tests
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@6 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -28,7 +28,12 @@ project_file_loader:
 
 tool_executor:
   compose:
+    - tool_executor_helper
     - streaminator
+    - system_wrapper
+
+tool_executor_helper:
+  compose:
     - verbosinator
     - stream_wrapper
 
