more refactoring & updating of tests
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@7 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -156,10 +156,15 @@ preprocessinator_includes_handler:
 
 preprocessinator_file_handler:
   compose:
+    - preprocessinator_file_handler_helper
     - configurator   
     - tool_executor  
     - file_path_utils
     - file_wrapper   
+
+preprocessinator_file_handler_helper:
+  compose:
+    - file_wrapper
 
 test_invoker:
   compose:
