git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@11 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/test/system/a_project.yml
+++ b/test/system/a_project.yml
@@ -1,6 +1,8 @@
 ---
+# super simple test project
 
 :project:
+  :use_exceptions: FALSE
   :use_preprocessor: FALSE
   :use_auxiliary_dependencies: FALSE
   :build_root: test/system/a_project/build
