more system test structuring
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@23 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/test/system/simple.yml
+++ b/test/system/simple.yml
@@ -1,20 +1,18 @@
 ---
-# super simple test project for: mock support
+# super simple test project for: basic unity test assert tests
 
 :project:
   :use_exceptions: FALSE
-  :build_root: test/system/mocks/build
+  :use_mocks: FALSE
+  :build_root: test/system/simple/build
 
 :paths:
   :test:
-    - test/system/mocks/test
+    - test/system/simple/test
   :source:
-    - test/system/mocks/source
+    - test/system/simple/source
   :include:
-    - test/system/mocks/include
-
-:cmock:
-  :mock_prefix: mock_
+    - test/system/simple/include
 
 :tools:
   :test_compiler:
