--- a/test/system/file_system_dependencies.yml
+++ b/test/system/file_system_dependencies.yml
@@ -1,7 +1,7 @@
 ---
 :project:
   :use_mocks: FALSE
-  :use_auxiliary_dependencies: FALSE
+  :use_auxiliary_dependencies: TRUE
   :use_preprocessor: FALSE
   :build_root: test/system/file_system/build
 
