--- a/test/system/file_system_mocks.yml
+++ b/test/system/file_system_mocks.yml
@@ -1,6 +1,6 @@
 ---
 :project:
-  :use_mocks: FALSE
+  :use_mocks: TRUE
   :use_auxiliary_dependencies: FALSE
   :use_preprocessor: FALSE
   :build_root: test/system/file_system/build
