first newly structured & meaningful system tests
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@25 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/test/system/project_mocks.yml
+++ b/test/system/project_mocks.yml
@@ -3,7 +3,14 @@
 
 :project:
   :use_exceptions: FALSE
+  :use_mocks: TRUE
+  :use_preprocessor: FALSE
+  :use_auxiliary_dependencie: FALSE
   :build_root: test/system/mocks/build
+
+  # shut up ceedling because of intentional exceptions;
+  # error report is misleading in test output  
+  :verbosity: 0
 
 :paths:
   :test:
