added environment variable manipulation to system_wrapper in preparation for adding environment variable setting to project file; refactored to centralize constants and made tests: & release: constants for task names; added passed tests to results reporter; added [extenders][base_path] to path standardization
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@27 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -26,6 +26,7 @@ project_file_loader:
   compose:
     - yaml_wrapper
     - stream_wrapper
+    - system_wrapper
     - file_wrapper
 
 tool_executor:
