removed on-disk searching & added file capitalization comparison smartness in file searching
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@29 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -101,9 +101,7 @@ file_finder:
     - file_finder_helper
 
 file_finder_helper:
-  compose:
-    - streaminator
-    - file_wrapper
+  compose: streaminator
 
 test_includes_extractor:
   compose:
