expanded test_or_source file finding to include header files
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@35 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -80,6 +80,7 @@ setupinator:
     - project_file_loader
     - test_includes_extractor
     - plugin_manager
+    - file_finder
 
 plugin_manager:
   compose:
