(1.) sanity checking on results from test fixture (2.) tightened up default handling for tools (3.) started working through better handling of creating test runners
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@45 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -123,7 +123,9 @@ file_finder:
   compose:
     - configurator
     - file_finder_helper
+    - file_path_utils
     - file_wrapper
+    - yaml_wrapper
 
 file_finder_helper:
   compose: streaminator
@@ -156,8 +158,13 @@ generator:
 generator_test_results:
   compose:
     - configurator  
+    - generator_test_results_sanity_checker
     - yaml_wrapper  
+
+generator_test_results_sanity_checker:
+  compose:
     - streaminator
+
 
 generator_test_runner:
   compose:
@@ -226,5 +233,7 @@ test_invoker_helper:
     - configurator
     - task_invoker
     - dependinator
+    - file_finder
     - file_path_utils
     - file_wrapper
+    - rake_wrapper
