forgot to update dependency injection for dependinator
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@55 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -177,7 +177,8 @@ dependinator:
     - test_includes_extractor
     - file_finder            
     - file_path_utils        
-    - rake_wrapper           
+    - rake_wrapper
+    - file_wrapper
 
 preprocessinator:
   compose:
