Refactored such that each test runs in its entirety from preprocessing through file generation to building and running.
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@58 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -221,19 +221,18 @@ preprocessinator_extractor:
 test_invoker:
   compose:
     - test_invoker_helper
-    - configurator
+    - streaminator
     - preprocessinator
     - task_invoker
     - dependinator
     - file_finder
-    - file_wrapper    
+    - file_path_utils
 
 test_invoker_helper:
   compose:
     - configurator
     - task_invoker
     - dependinator
-    - file_finder
     - file_path_utils
     - file_wrapper
     - rake_wrapper
