--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -31,6 +31,7 @@ project_file_loader:
 
 tool_executor:
   compose:
+    - configurator
     - tool_executor_helper
     - streaminator
     - system_wrapper
