fixed windows path problem introduced with $stderr redirect modifications to shelled out command line
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@69 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -36,7 +36,9 @@ tool_executor:
     - system_wrapper
 
 tool_executor_helper:
-  compose: streaminator
+  compose:
+    - streaminator
+    - system_wrapper
 
 configurator:
   compose:
