segregated cached input config for test and release builds
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@95 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -236,6 +236,8 @@ test_invoker:
 test_invoker_helper:
   compose:
     - configurator
+    - setupinator
+    - project_config_manager
     - task_invoker
     - dependinator
     - file_path_utils
@@ -245,6 +247,8 @@ test_invoker_helper:
 release_invoker:
   compose:
     - configurator
+    - setupinator
+    - project_config_manager
     - dependinator
     - file_path_utils
     - rake_wrapper
