added file listing tasks; robustified collecting up sources that are tested
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@99 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -236,10 +236,10 @@ test_invoker:
 test_invoker_helper:
   compose:
     - configurator
-    - setupinator
-    - project_config_manager
     - task_invoker
     - dependinator
+    - test_includes_extractor
+    - file_finder
     - file_path_utils
     - file_wrapper
     - rake_wrapper
@@ -247,8 +247,6 @@ test_invoker_helper:
 release_invoker:
   compose:
     - configurator
-    - setupinator
-    - project_config_manager
     - dependinator
     - file_path_utils
     - rake_wrapper
