verbosity setting will not trigger project rebuilds by changing configuration; finished smart, enhanced dependency handling for release builds (tests yet to go)
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@102 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -248,8 +248,8 @@ release_invoker:
     - release_invoker_helper
     - configurator
     - dependinator
+    - task_invoker
     - file_path_utils
-    - rake_wrapper
 
 release_invoker_helper:
   compose:
