Fixed extra link object file path handling to accommodate plugin overrides. Did some simplification as a result as well.
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@109 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -237,13 +237,13 @@ preprocessinator_extractor:
 
 test_invoker:
   compose:
+    - configurator
     - test_invoker_helper
     - streaminator
     - preprocessinator
     - task_invoker
     - dependinator
     - project_config_manager
-    - file_finder
     - file_path_utils
 
 test_invoker_helper:
