Implemented more configurable sanity checks given realities of exit codes with simulators. Added progress text to clean and clobber messages
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@127 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -183,8 +183,8 @@ generator_test_results:
 
 generator_test_results_sanity_checker:
   compose:
+    - configurator  
     - streaminator
-
 
 generator_test_runner:
   compose:
