1. Multiple load paths for plugins are now possible 2. Multiple paths for options files are now possible 3. Improved plugin support including summary tasks and handling for default configurations.
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@148 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -60,6 +60,9 @@
 
 :tools:
 
-:plugins:
-  :enabled:
+#:plugins:
+#  :load_paths:
+#    - ../../plugins
+#  :enabled:
+#    - stdout_pretty_tests_report
 ...
