more better comments
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@152 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -1,5 +1,10 @@
 ---
 
+# Notes:
+# Sample project C code is not presently written to produce a release artifact.
+# As such, release build options are disabled.
+# This sample, therefore, only demonstrates running a collection of unit tests.
+
 :project:
   :use_exceptions: FALSE
   :use_test_preprocessor: TRUE
@@ -47,7 +52,10 @@
     int8:     INT8
     bool:     UINT8
 
-:tools:
+#:tools:
+# Ceedling defaults to using gcc for compiling, linking, etc.
+# As [:tools] is blank, gcc will be used (so long as it's in your system path)
+# See documentation to configure a given toolchain for use
 
 :plugins:
   :load_paths:
