(1) fixed tool execution verbosity (2) added background execution setting to default tools (3) fixed unnecessary bullseye tool execution in results gathering
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@164 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/plugins/bullseye/defaults.yml
+++ b/plugins/bullseye/defaults.yml
@@ -39,5 +39,10 @@
       - --width 120
       - --no-source
       - "\"${1}\""
+  :bullseye_browser:
+    :executable: CoverageBrowser
+    :background_exec: :auto
+    :arguments:
+      - "$": ENVIRONMENT_COVFILE
 
 ...
