fixes to environment handling; renaming of constants
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@167 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/plugins/bullseye/defaults.yml
+++ b/plugins/bullseye/defaults.yml
@@ -38,11 +38,11 @@
       - '--file $': ENVIRONMENT_COVFILE
       - --width 120
       - --no-source
-      - "\"${1}\""
+      - '"${1}"'
   :bullseye_browser:
     :executable: CoverageBrowser
     :background_exec: :auto
     :arguments:
-      - "$": ENVIRONMENT_COVFILE
+      - '"$"': ENVIRONMENT_COVFILE
 
 ...
