(1) robustified bullseye default tool options (2) added tcsh handling for stderr_redirection (3) modified tool execution to automatically redirect stderr to log when logging enabled (4) renamed is_windows? method
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@168 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/plugins/bullseye/defaults.yml
+++ b/plugins/bullseye/defaults.yml
@@ -11,7 +11,7 @@
     :arguments:
       - -g
       - -I"$": COLLECTION_PATHS_TEST_SUPPORT_SOURCE_INCLUDE_VENDOR
-      - -I"$": COLLECTION_PATHS_TEST_TOOLCHAIN_INCLUDE
+      - -I"$": COLLECTION_PATHS_BULLSEYE_TOOLCHAIN_INCLUDE
       - -D$: COLLECTION_DEFINES_TEST_AND_VENDOR
       - -DCODE_COVERAGE
       - -c "${1}"
@@ -21,7 +21,7 @@
     :arguments:
       - ${1}
       - -o ${2}
-      - -L$: BULLSEYE_LIB_PATH
+      - -L$: PLUGINS_BULLSEYE_LIB_PATH
       - -lcov
   :bullseye_fixture:
     :executable: ${1}
