added idea of an optional tool to prevent search path validations of the executable (useful in non build step contexts)
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@169 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/plugins/bullseye/defaults.yml
+++ b/plugins/bullseye/defaults.yml
@@ -42,6 +42,7 @@
   :bullseye_browser:
     :executable: CoverageBrowser
     :background_exec: :auto
+    :optional: TRUE
     :arguments:
       - '"$"': ENVIRONMENT_COVFILE
 
