--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -57,6 +57,11 @@
 # As [:tools] is blank, gcc will be used (so long as it's in your system path)
 # See documentation to configure a given toolchain for use
 
+# some platforms need the default test_linker to explicitly link the math lib (uncomment if this is you)
+# :tool_test_linker:
+#   :arguments:
+#     - -lm
+
 :plugins:
   :load_paths:
     - ../../plugins
