reimplemented plugin list validation (what the heck happened to it in the first place?)
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@190 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/lib/objects.yml
+++ b/lib/objects.yml
@@ -79,6 +79,8 @@ configurator_setup:
   compose:
     - configurator_builder
     - configurator_validator
+    - configurator_plugins
+    - stream_wrapper
 
 configurator_plugins:
   compose:
