--- a/plugins/bullseye/defaults.yml
+++ b/plugins/bullseye/defaults.yml
@@ -1,5 +1,8 @@
 ---
 
+:paths:
+  :bullseye_toolchain_include: []
+
 :tools:
   :bullseye_instrumentation:
     :executable: covc
@@ -14,7 +17,6 @@
       - -I"$": COLLECTION_PATHS_TEST_SUPPORT_SOURCE_INCLUDE_VENDOR
       - -I"$": COLLECTION_PATHS_BULLSEYE_TOOLCHAIN_INCLUDE
       - -D$: COLLECTION_DEFINES_TEST_AND_VENDOR
-      - -DCODE_COVERAGE
       - -c "${1}"
       - -o "${2}"
   :bullseye_linker:
