plugin updates for coverage-related -D symbols
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@196 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/plugins/bullseye/defaults.yml
+++ b/plugins/bullseye/defaults.yml
@@ -17,6 +17,7 @@
       - -I"$": COLLECTION_PATHS_TEST_SUPPORT_SOURCE_INCLUDE_VENDOR
       - -I"$": COLLECTION_PATHS_BULLSEYE_TOOLCHAIN_INCLUDE
       - -D$: COLLECTION_DEFINES_TEST_AND_VENDOR
+      - -DBULLSEYE_COMPILER
       - -c "${1}"
       - -o "${2}"
   :bullseye_linker:
