--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -32,7 +32,7 @@
     - test/support
 
 :defines:
-  :commmon: &common_defines
+  :common: &common_defines
   :test:
     - *common_defines
     - TEST
