finally renamed 'auxiliary dependencies' to 'deep dependencies'
git-svn-id: https://ceedling.svn.sourceforge.net/svnroot/ceedling/trunk@205 f01913a8-9348-4cf6-9845-091d89bf350d

--- a/test/system/file_system_kitchen_sink.yml
+++ b/test/system/file_system_kitchen_sink.yml
@@ -1,7 +1,7 @@
 ---
 :project:
   :use_mocks: TRUE
-  :use_auxiliary_dependencies: TRUE
+  :use_deep_dependencies: TRUE
   :use_preprocessor: TRUE
   :build_root: test/system/file_system/build
 
