--- a/test/system/file_system_preprocess.yml
+++ b/test/system/file_system_preprocess.yml
@@ -1,7 +1,7 @@
 ---
 :project:
   :use_mocks: FALSE
-  :use_auxiliary_dependencies: FALSE
+  :use_deep_dependencies: FALSE
   :use_preprocessor: TRUE
   :build_root: test/system/file_system/build
 
