--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -8,7 +8,7 @@
 :project:
   :use_exceptions: FALSE
   :use_test_preprocessor: TRUE
-  :use_auxiliary_dependencies: TRUE
+  :use_deep_dependencies: TRUE
   :build_root: build
 #  :release_build: TRUE
   :test_file_prefix: Test
@@ -58,7 +58,7 @@
 # See documentation to configure a given toolchain for use
 
 # some platforms need the default test_linker to explicitly link the math lib (uncomment if this is you)
-# :tool_test_linker:
+# :tools_test_linker:
 #   :arguments:
 #     - -lm
 
