--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "vendor/unity"]
 	path = vendor/unity
 	url = git://github.com/ThrowTheSwitch/Unity.git
-[submodule "vnedor/cmock"]
-	path = vnedor/cmock
+[submodule "vendor/cmock"]
+	path = vendor/cmock
 	url = git://github.com/ThrowTheSwitch/CMock.git
