added mingw in path

--- a/examples/blinky/project.yml
+++ b/examples/blinky/project.yml
@@ -17,7 +17,7 @@
   - :f_cpu: 16000000UL 
   - :serial_port: COM8
   - :objcopy: avr-objcopy
-  - :path: "C:\WinAVR-20100110\bin;C:\WinAVR-20100110\utils\bin;#{ENV['PATH']}"
+  - :path: "C:\mingw\bin;C:\WinAVR-20100110\bin;C:\WinAVR-20100110\utils\bin;#{ENV['PATH']}"
 :extension:
   :executable: .bin
 
